[tool.poetry]
name = "hedwig"
version = "0.1.0"
description = "Hedwig, the Messenger"
authors = ["Vibhu Agarwal <vibhu4agarwal@gmail.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.11.4"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
